--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <div class="gear-bg"></div>
     <div class="container">
         <img src="profile.jpg" alt="Profile Picture" class="profile-pic">
-        <h1>Zaid Alshaikh Links</h1>
+        <h1>Zaid Alshaikh</h1>
         <div id="links"></div>
     </div>
     <script src="script.js"></script>
