--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <style>
         body {
             background-color: #1e1e1e;
-            color: #ccc;
+            color: #999B9B;
             font-family: Arial, sans-serif;
             display: flex;
             justify-content: center;
