--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
             position: fixed;
             top: 50%;
             left: 50%;
-            width: 400px;
-            height: 700px;
+            width: 650px;
+            height: 650px;
             background: url('gear.png') no-repeat center;
             background-size: contain;
             transform: translate(-50%, -50%) rotate(0deg);
@@ -61,7 +61,7 @@
         #links a {
             display: block;
             background: #333;
-            color: #e0a80d;
+            color: #999B9B;
             padding: 10px;
             margin: 10px 0;
             border-radius: 5px;
