--- a/index.html
+++ b/index.html
@@ -76,13 +76,24 @@
             color: #fff;
             transform: scale(1.05);
         }
-        @keyframes shine-animation {
+        .shine-text {
+    color: silver; /* Base color of the text */
+    font-size: 24px; /* Adjust as needed */
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    position: relative;
+    animation: shine-animation 2s infinite alternate; /* Animates the glow */
+}
+
+/* Keyframes for the shining effect */
+@keyframes shine-animation {
     0% {
         text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 20px #ff0, 0 0 30px #ff0, 0 0 40px #ff0; /* Bright glow */
     }
     100% {
         text-shadow: 0 0 2px #fff, 0 0 5px #fff, 0 0 10px #ff0, 0 0 15px #ff0, 0 0 20px #ff0; /* Dimmer glow */
     }
+}
     </style>
 </head>
 <body>
