--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Zaid Alshaikh Links - Mechanical Theme</title>
+    <title>Zaid Alshaikh</title>
     <link rel="stylesheet" href="styles.css">
     <style>
         body {
             background-color: #1e1e1e;
-            color: #999B9B;
+            color: #ACACAC;
             font-family: Arial, sans-serif;
             display: flex;
             justify-content: center;
@@ -55,14 +55,14 @@
             margin-bottom: 10px;
         }
         h1 {
-            color: #e0a80d;
+            color: #FFFFFF;
             text-transform: uppercase;
             letter-spacing: 2px;
         }
         #links a {
             display: block;
             background: #333;
-            color: #999B9B;
+            color: #ACACAC;
             padding: 10px;
             margin: 10px 0;
             border-radius: 5px;
@@ -70,20 +70,14 @@
             font-weight: bold;
             box-shadow: inset 2px 2px 5px #1a1a1a, inset -2px -2px 5px #404040;
             transition: all 0.3s ease;
+            animation: shine-animation 2s infinite alternate;
         }
         #links a:hover {
             background: #444;
             color: #fff;
             transform: scale(1.05);
         }
-        .shine-text {
-    color: silver; /* Base color of the text */
-    font-size: 24px; /* Adjust as needed */
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    position: relative;
-    animation: shine-animation 2s infinite alternate; /* Animates the glow */
-}
+       
 
 /* Keyframes for the shining effect */
 @keyframes shine-animation {
