--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
             position: fixed;
             top: 50%;
             left: 50%;
-            width: 650px;
-            height: 650px;
+            width: 500px;
+            height: 500px;
             background: url('gear.png') no-repeat center;
             background-size: contain;
             transform: translate(-50%, -50%) rotate(0deg);
@@ -82,10 +82,10 @@
 /* Keyframes for the shining effect */
 @keyframes shine-animation {
     0% {
-        text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 20px #ff0, 0 0 30px #ff0, 0 0 40px #ff0; /* Bright glow */
+        text-shadow: 0 0 5px #FFFFFF, 0 0 10px #FFFFFF, 0 0 20px #FFFFFF, 0 0 30px #FFFFFF, 0 0 40px #FFFFFF; /* Bright glow */
     }
     100% {
-        text-shadow: 0 0 2px #fff, 0 0 5px #fff, 0 0 10px #ff0, 0 0 15px #ff0, 0 0 20px #ff0; /* Dimmer glow */
+        text-shadow: 0 0 2px #FFFFFF, 0 0 5px #FFFFFF, 0 0 10px #FFFFFF, 0 0 15px #FFFFFF, 0 0 20px #FFFFFF; /* Dimmer glow */
     }
 }
     </style>
