--- a/index.html
+++ b/index.html
@@ -88,10 +88,20 @@
 /* Keyframes for the shining effect */
 @keyframes shine-animation {
     0% {
-        text-shadow: 0 0 5px #FFFFFF, 0 0 10px #FFFFFF, 0 0 20px #FFFFFF, 0 0 30px #FFFFFF, 0 0 40px #FFFFFF; /* Bright glow */
+        text-shadow: 
+            0 0 5px #FFFFFF,   /* Small white glow */
+            0 0 10px #FFFFFF,  /* Medium white glow */
+            0 0 20px #FFFFFF,  /* Larger white glow */
+            0 0 30px #FFFFFF,  /* Even larger white glow */
+            0 0 40px #FFFFFF;  /* Brightest white glow */
     }
     100% {
-        text-shadow: 0 0 2px #FFFFFF, 0 0 5px #FFFFFF, 0 0 10px #FFFFFF, 0 0 15px #FFFFFF, 0 0 20px #FFFFFF; /* Dimmer glow */
+        text-shadow: 
+            0 0 2px #FFFFFF,   /* Dimmer small white glow */
+            0 0 5px #FFFFFF,   /* Dimmer medium white glow */
+            0 0 10px #FFFFFF,  /* Dimmer larger white glow */
+            0 0 15px #FFFFFF,  /* Dimmer even larger white glow */
+            0 0 20px #FFFFFF;  /* Dimmer brightest white glow */
     }
 }
     </style>
