--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         #links a {
     display: block;
     background: #333; /* Background color of the link */
-    color: #ACACAC; /* Default text color */
+    color: #FFFFFF; /* Default text color */
     padding: 10px;
     margin: 10px 0;
     border-radius: 5px;
