--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         #links a {
     display: block;
     background: #333; /* Background color of the link */
-    color: #00FFFF; /* Default text color */
+    color: #C0C0C0; /* Default text color */
     padding: 10px;
     margin: 10px 0;
     border-radius: 5px;
