--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
         }
         #links a {
     display: block;
-    background: #333; /* Background color of the link */
-    color: #C0C0C0; /* Default text color */
+    background: #C0C0C0; /* Background color of the link */
+    color: #000000; /* Default text color */
     padding: 10px;
     margin: 10px 0;
     border-radius: 5px;
