--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
     color: #FFFFFF; /* White text on hover */
     transform: scale(1.05); /* Slightly enlarge the link */
     text-shadow: 
-        0 0 5px #FFFFFF,   /* Small white glow */
-        0 0 10px #FFFFFF,  /* Medium white glow */
-        0 0 20px #FFFFFF;  /* Larger white glow */
+        0 0 5px #0000FF,   /* Small white glow */
+        0 0 10px #0000FF,  /* Medium white glow */
+        0 0 20px #0000FF;  /* Larger white glow */
 }
        
 
