--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Zaid Alshaikh | Professional Profile</title>
+    <title>Zaid AbdelRahim | Professional Profile</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" type="image/png" href="gear_small.png">
@@ -19,7 +19,7 @@
             <img src="profile.jpg" alt="Zaid Alshaikh" class="profile-pic">
             <div class="profile-pic-border"></div>
         </div>
-        <h1>Zaid Alshaikh</h1>
+        <h1>Zaid AbdelRahim</h1>
         <div class="title">Mechanical Engineer</div>
         <div id="links"></div>
         <div class="footer">© 2025 Zaid Alshaikh</div>
@@ -30,7 +30,6 @@
         const links = [
             { name: "Phone", url: "tel:+962788850531", icon: "fas fa-phone" },
             { name: "Instagram", url: "https://www.instagram.com/zaidalshaikh.05/", icon: "fab fa-instagram" },
-            { name: "Facebook", url: "https://www.facebook.com/zaid.alshaiskh", icon: "fab fa-facebook-f" },
             { name: "WhatsApp", url: "https://wa.me/962788850531", icon: "fab fa-whatsapp" },
             { name: "Snapchat", url: "https://snapchat.com/t/6ObtCtIF", icon: "fab fa-snapchat-ghost" },
             { name: "LinkedIn", url: "http://linkedin.com/in/zaid-abdelrahim", icon: "fab fa-linkedin-in" }
