--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
     <div class="container">
         <div class="blueprint-border"></div>
         <div class="profile-pic-container">
-            <img src="profile.jpg" alt="Zaid Alshaikh" class="profile-pic">
+            <img src="profile.jpg" alt="Zaid AbdelRahim" class="profile-pic">
             <div class="profile-pic-border"></div>
         </div>
         <h1>Zaid AbdelRahim</h1>
         <div class="title">Mechanical Engineer</div>
         <div id="links"></div>
-        <div class="footer">© 2025 Zaid Alshaikh</div>
+        <div class="footer">© 2025 Zaid AbdelRahim</div>
     </div>
     
     <script>
